--- a/src/features/Overview/ValidatorsCard/validatorsCard.module.css
+++ b/src/features/Overview/ValidatorsCard/validatorsCard.module.css
@@ -1,10 +1,14 @@
 .stat-row {
   display: flex;
   flex-wrap: wrap;
-  gap: 8px;
+  gap: var(--space-2);
   width: 100%;
 
   > div {
     flex: 1 1 auto;
+    &:first-child {
+      flex-grow: 0;
+      min-width: 80px;
+    }
   }
 }
